Bug 1219925 - Fix for format specifiers in getCleartypeParameters. r=jfkthame